--- a/api-reference/mocking-apis/strictness-modes.mdx
+++ b/api-reference/mocking-apis/strictness-modes.mdx
@@ -1,154 +1,43 @@
 ---
-title: "Mock Object Strictness Modes"
-description: "Reference for adjusting mock object behaviors with respect to unexpected and uninteresting calls, using NiceMock, NaggyMock, and StrictMock wrappers to control test verbosity and failure modes."
+title: "Strictness Modes"
+description: "Reference for NiceMock, NaggyMock, and StrictMock wrappers, which control the handling of unexpected or uninteresting calls on mock objects. Helps select the appropriate mode for different testing scenarios."
 ---
 
-# Mock Object Strictness Modes
+# Strictness Modes
+
+Control how mock objects handle uninteresting or unexpected calls using the strictness wrappers provided by GoogleMock: `NiceMock`, `NaggyMock`, and `StrictMock`. These wrappers modify the default warning and error behavior for calls without explicit expectations, empowering you to fine-tune test feedback and maintainability.
+
+---
 
 ## Overview
 
-GoogleMock provides flexible control over how mock objects handle **uninteresting** and **unexpected** calls through its three distinct strictness modes: **NiceMock**, **NaggyMock**, and **StrictMock**. These wrapper classes allow you to adjust the verbosity of warnings and the severity of failures that arise when mock methods are invoked without matching expectations.
+When writing tests with mocks, you often encounter calls to mock methods that do not have matching `EXPECT_CALL` specifications. These are termed **uninteresting calls** and can indicate missing expectations or intentional ignored behavior. How such calls are handled can significantly impact test clarity and reliability.
 
-By choosing the appropriate strictness mode, you can tailor test feedback to either ignore, warn about, or fail on calls that are not explicitly expected, improving test clarity and robustness.
+GoogleMock provides three strictness modes to manage uninteresting calls:
 
----
+| Mode        | Behavior for Uninteresting Calls         | Typical Use Case                                     |
+|-------------|------------------------------------------|----------------------------------------------------|
+| **NiceMock** | Silences warnings, allows calls silently | Use when uninteresting calls are expected and benign. Ideal for less noisy, maintainable tests. |
+| **NaggyMock**| Emits warnings on uninteresting calls    | Default behavior currently; useful during test development to catch unexpected usage. |
+| **StrictMock**| Fails the test on uninteresting calls    | Use when precise control and full specification of mock interactions is critical.       |
 
-## Understanding Uninteresting and Unexpected Calls
-
-- **Uninteresting Call:** A call to a mock method for which *no* `EXPECT_CALL` has been set. These calls are allowed by default but usually generate warnings in the **Naggy** mode.
-- **Unexpected Call:** A call to a mock method where there *are* expectations set, but none matches the actual invocation (e.g., wrong arguments or call count). This is always a test failure regardless of the strictness mode.
-
-
-## Strictness Modes
-
-### NiceMock<T>
-
-- **Behavior:** Suppresses warnings for uninteresting calls.
-- **Use Case:** Best when you want cleaner test output and trust that uninteresting calls are acceptable or irrelevant.
-
-```cpp
-using ::testing::NiceMock;
-NiceMock<MockFoo> nice_foo;
-EXPECT_CALL(nice_foo, DoThis());
-nice_foo.DoThis();
-```
-
-- NiceMock is a subclass of the mock class `T` and inherits all constructors of `T`. Thus, you can construct `NiceMock<T>` with any arguments that `T` supports.
-- It only affects mock methods declared directly in `T` via `MOCK_METHOD`. Methods inherited from base classes may not be affected.
-- Its destructor must be virtual in `T` for proper behavior.
-
-### NaggyMock<T> (Default)
-
-- **Behavior:** Prints warnings when uninteresting calls occur.
-- **Use Case:** Useful when actively developing or debugging tests to identify unexpected invocations.
-
-```cpp
-using ::testing::NaggyMock;
-NaggyMock<MockFoo> naggy_foo;
-EXPECT_CALL(naggy_foo, DoThis());
-naggy_foo.DoThis();
-```
-
-- NaggyMock is functionally equivalent to the plain mock class `T` currently, as mocks default to naggy behavior.
-
-### StrictMock<T>
-
-- **Behavior:** Treats all uninteresting calls as errors, failing the test immediately.
-- **Use Case:** When test correctness demands no calls are made outside of explicitly set expectations, enforcing strict interaction verification.
-
-```cpp
-using ::testing::StrictMock;
-StrictMock<MockFoo> strict_foo;
-EXPECT_CALL(strict_foo, DoThis());
-nstrict_foo.DoThis();
-```
-
-- Like NiceMock and NaggyMock, StrictMock inherits constructors from `T`.
-- Only affects mock methods declared via `MOCK_METHOD` directly in `T`.
+Each wrapper is a template subclass of your mock class, inheriting constructors and enabling seamless substitution.
 
 ---
 
-## When to Use Each Mode
+## Using Strictness Wrappers
 
-| Mode       | Warning on Uninteresting Calls | Uninteresting Calls Fail Test? | Typical Use
-|------------|-------------------------------|-------------------------------|------------
-| NiceMock   | No                            | No                            | Production tests or when you want to focus only on explicitly tested interactions
-| NaggyMock  | Yes                           | No                            | Default during test development to track unexpected uses
-| StrictMock | Treated as errors             | Yes                           | To ensure full control over interactions and forbid any unplanned calls
-
----
-
-## How to Apply Strictness Modes
-
-1. Define your mock class as normal with `MOCK_METHOD` declarations.
-2. Choose the strictness mode wrapper you want to use:
-   - Wrap mock instances with `NiceMock<>`, `NaggyMock<>`, or `StrictMock<>`.
-3. Construct the wrapped mock with the same constructor arguments as the base mock.
-
-For example:
+Suppose you have a mock class `MockFoo` generated with GoogleMock:
 
 ```cpp
 class MockFoo {
  public:
   MOCK_METHOD(void, DoThis, (), ());
-  MOCK_METHOD(int, GetValue, (), (const));
-};
-
-// Nice mock suppressing uninteresting call warnings
-NiceMock<MockFoo> nice_mock;
-// Naggy mock printing warnings on uninteresting calls
-NaggyMock<MockFoo> naggy_mock;
-// Strict mock failing on uninteresting calls
-StrictMock<MockFoo> strict_mock;
-```
-
----
-
-## Practical Guidance
-
-### Suppressing Warnings for Uninteresting Calls
-
-- Use `NiceMock<T>` if some mock methods are not relevant to your test and you want to avoid warnings.
-- Alternatively, explicitly use `EXPECT_CALL(mock, Method(_)).Times(AnyNumber())` to mark certain methods as expected any number of times.
-
-### Enforcing Interaction Contracts
-
-- Use `StrictMock<T>` to treat any unexpected or uninteresting calls as errors, enforcing tight control on mock interactions.
-
-### Debugging Unexpected Calls
-
-- Use `NaggyMock<T>` (default) to see warnings that can help discover calls that you might want to set expectations on.
-- Use the command-line flag `--gmock_verbose=info` during test runs to get detailed call traces for finer debugging.
-
-### Leak Detection and Strictness
-
-- Strictness mode wrappers do not affect leak detection but ensure that expectations are verified upon destruction.
-- Use `Mock::AllowLeak(&mock)` if you need to deliberately leak a mock and suppress leak errors.
-
----
-
-## Under the Hood
-
-- The strictness modes work by registering call reaction behaviors with the `testing::Mock` framework.
-- Upon construction, each strictness wrapper class registers the reaction for uninteresting calls (allow, warn, or fail).
-- Upon destruction, they unregister these behaviors automatically.
-
-This design ensures that all calls to the mock object behave according to the selected strictness, without extra user code.
-
----
-
-## Example: Effect of Strictness Modes
-
-Consider a mock class:
-
-```cpp
-class MockFoo {
- public:
-  MOCK_METHOD(void, Bar, (int x));
+  MOCK_METHOD(int, DoThat, (bool flag), ());
 };
 ```
 
-Usage with different modes:
+To change its strictness mode:
 
 ```cpp
 #include <gmock/gmock.h>
@@ -156,67 +45,157 @@ using ::testing::NiceMock;
 using ::testing::NaggyMock;
 using ::testing::StrictMock;
 
-NiceMock<MockFoo> nice;
-NaggyMock<MockFoo> naggy;
-StrictMock<MockFoo> strict;
+// Nice mock: suppresses warnings on uninteresting calls
+NiceMock<MockFoo> nice_foo;
 
-EXPECT_CALL(nice, Bar(5));
-EXPECT_CALL(naggy, Bar(5));
-EXPECT_CALL(strict, Bar(5));
+// Naggy mock: warns on uninteresting calls (default behavior)
+NaggyMock<MockFoo> naggy_foo;
 
-nice.Bar(3);   // No warning, allowed
-naggy.Bar(3);  // Warning on uninteresting call
-strict.Bar(3); // Test failure: uninteresting call
+// Strict mock: fails test on uninteresting calls
+StrictMock<MockFoo> strict_foo;
 ```
+
+You can construct these wrapped mocks with any arguments supported by the base mock class constructors:
+
+```cpp
+class MockBar {
+ public:
+  explicit MockBar(const std::string& name);
+  MOCK_METHOD(void, This, (), ());
+};
+
+NiceMock<MockBar> nice_bar("test");
+StrictMock<MockBar> strict_bar("test");
+```
+
+---
+
+## Behavior Details
+
+### NiceMock
+- Allows calls to methods without an expectation without warnings or errors.
+- Ideal for tests where certain calls are not relevant or unimportant.
+- Ensures tests are quieter and less sensitive to internal changes.
+
+### NaggyMock
+- Prints warnings for any uninteresting calls.
+- Acts as a temporary, diagnostic setting to ensure you notice unexpected calls.
+- Currently the default behavior for GoogleMock mock objects.
+
+### StrictMock
+- Treats every uninteresting call as a test failure.
+- Forces explicit expectations on all mock method calls.
+- Ideal for tests requiring rigorous verification and no surprises.
+
+---
+
+## How It Works Internally
+
+Under the hood, `NiceMock`, `NaggyMock`, and `StrictMock` inherit from internal base classes that register their uninteresting call reactions with the GoogleMock framework. This changes the global behavior of the mock instance:
+
+- `NiceMock` calls `AllowUninterestingCalls` to permit uninteresting calls silently.
+- `NaggyMock` calls `WarnUninterestingCalls` to emit warnings.
+- `StrictMock` calls `FailUninterestingCalls` to convert uninteresting calls into errors.
+
+They also unregister their reactions when destructed to avoid side effects beyond their lifetime.
+
+### Important Limitations
+
+- Only affects mock methods defined **directly** in the mock class via `MOCK_METHOD`. Mocked methods inherited from base classes may not respect these wrappers.
+- Nesting strictness wrappers (e.g., `NiceMock<StrictMock<MockFoo>>`) is **not supported**.
+- Effectiveness depends on the base class having a virtual destructor for proper cleanup.
+
+---
+
+## Choosing the Right Strictness Mode
+
+| Scenario                                                      | Recommended Mode   |
+|---------------------------------------------------------------|-------------------|
+| You want to ignore uninteresting calls and reduce test noise. | `NiceMock`        |
+| You want warnings but not failures when calls are uninteresting | `NaggyMock`       |
+| You want to treat all uninteresting calls as test failures.    | `StrictMock`      |
+
+---
+
+## Practical Examples
+
+### Suppressing Uninteresting Call Warnings
+
+```cpp
+NiceMock<MockFoo> mock;
+
+EXPECT_CALL(mock, DoThis());
+
+mock.DoThis();      // Expected call, passes
+mock.DoThat(true);  // Uninteresting call, no warning
+```
+
+### Receiving Warnings on Uninteresting Calls
+
+```cpp
+NaggyMock<MockFoo> mock;
+
+EXPECT_CALL(mock, DoThis());
+
+mock.DoThis();      // Expected call, passes
+mock.DoThat(true);  // Prints warning on uninteresting call
+```
+
+### Treating Uninteresting Calls as Failures
+
+```cpp
+StrictMock<MockFoo> mock;
+
+EXPECT_CALL(mock, DoThis());
+
+mock.DoThis();      // Expected call, passes
+mock.DoThat(true);  // Test fails due to uninteresting call
+```
+
+### Using with Non-Default Constructors
+
+```cpp
+class MockBar {
+ public:
+  explicit MockBar(const std::string& name) : str_(name) {}
+  MOCK_METHOD(int, This, (), ());
+  const std::string& str() const { return str_; }
+ private:
+  std::string str_;
+};
+
+NiceMock<MockBar> nice_bar("hello");
+EXPECT_CALL(nice_bar, This());
+nice_bar.This();
+```
+
+---
+
+## Common Pitfalls and Tips
+
+- Do **not** nest multiple strictness wrappers. Choose one for your mock.
+- Prefer `NiceMock` for long-lived tests or libraries where uninteresting calls are expected.
+- Use `StrictMock` when you require full verification of all mock interactions.
+- Be aware that wrapping mocks with `NiceMock`, `NaggyMock`, or `StrictMock` changes the behavior of uninteresting calls only — unexpected calls (calls not matching any expectation) always cause errors.
 
 ---
 
 ## Troubleshooting
 
-### Unexpected Calls
-
-- Always ensure `EXPECT_CALL` is used before exercising the mock object.
-- Use `--gmock_verbose=info` to see all matching calls and verify if the arguments align.
-
-### Uninteresting Call Warnings
-
-- Confirm if calls without expectations are valid.
-- Use `NiceMock` to suppress warnings or add catch-all expectations like:
-  
-  ```cpp
-  EXPECT_CALL(mock_obj, Method(_)).Times(testing::AnyNumber());
-  ```
-
-### Verifying and Resetting
-
-You can explicitly verify expectations and clear them before destruction:
-
-```cpp
-using ::testing::Mock;
-Mock::VerifyAndClearExpectations(&mock_obj);
-```
-
-Do NOT add new expectations after verification for a mock, as this leads to undefined behavior.
-
----
-
-## References and Further Reading
-
-- [Nice, Naggy, and Strict Mocks](https://google.github.io/googletest/gmock_cook_book.html#NiceStrictNaggy)
-- [GoogleMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html)
-- [Defining Expectations & Behaviors](https://google.github.io/googletest/reference/mocking.md#EXPECT_CALL)
-- [Mocking Methods & Objects](https://google.github.io/googletest/api/reference/mocking-methods.html)
+- **Unexplained warnings or failures:** Check if you accidentally used multiple strictness wrappers or if the mock methods are inherited.
+- **Uninteresting call warnings despite using `NiceMock`:** Confirm your mock methods are defined directly in the mock class, not just in a base class.
+- **Unexpected test failures in `StrictMock`:** You might be calling mock methods without corresponding `EXPECT_CALL`s. Add expectations or switch to a less strict mode.
 
 ---
 
 ## Related Documentation
 
-- [gMock Mocking Reference](reference/mocking.md) for detailed explanation of `EXPECT_CALL`, `ON_CALL` and modifiers.
-- [gMock Cookbook](gmock_cook_book.md) for recipes on advanced mocking patterns.
-- [GoogleTest Running and Configuring Tests](api-reference/core-apis/running-tests) for test execution flags like `--gmock_verbose`.
+- [gMock Cookbook - The Nice, the Strict, and the Naggy](https://google.github.io/googletest/gmock_cook_book.html#NiceStrictNaggy)
+- [Mock Object Definition](../mock-object-definition.md) — Defining mocks and mock methods
+- [Setting Expectations and Behavior](../setting-expectations-and-behavior.md) — Using `EXPECT_CALL` and `ON_CALL`
+- [Mocking Basics Guide](https://google.github.io/googletest/gmock_for_dummies.html) — Getting started with mocks
+- [Mocking Reference](../mocking.md) — Detailed class and macro reference
 
 ---
 
-## Summary
-
-GoogleMock's strictness modes provide precise control over how uninteresting and unexpected mock calls are handled. Use `NiceMock` to silence uninteresting call warnings, `NaggyMock` to get warnings (default behavior), and `StrictMock` to fail tests on any uninteresting calls. These modes help maintain test clarity and enforce interaction contracts to fit development and production testing needs.
+Understanding and choosing the appropriate strictness mode aligns your tests with your verification philosophy — from quiet ignoring with `NiceMock` to strict validation with `StrictMock`. Embrace these wrappers to create maintainable, clear, and robust tests that reflect your project's priorities.
